# lazygitrs

./: .gitignore  .ignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODOS.md  cliff.toml  justfile  logo.txt  tag_and_release.sh
.claude/commands/: audit-help.md
.github/workflows/: release.yml
_docs/: persisted-settings.md
npm/: README.md  package.json
scripts/: fetch-references.ts  gen-benchmarks.ts  gen-themes.ts
src/: app.rs  main.rs
src/config/: app_state.rs  keybindings.rs  mod.rs  theme.rs  user_config.rs
src/generated_themes/: aura.json  ayu.json  carbonfox.json  catppuccin-frappe.json  catppuccin-macchiato.json  catppuccin.json  cobalt2.json  cursor.json  dracula.json  everforest.json  flexoki.json  github.json  gruvbox.json  kanagawa.json  lucent-orng.json  material.json  matrix.json  mercury.json  monokai.json  nightowl.json  nord.json  one-dark.json  opencode.json  orng.json  osaka-jade.json  palenight.json  rosepine.json  solarized.json  synthwave84.json  tokyonight.json  vercel.json  vesper.json  zenburn.json
src/git/: ai_commit.rs  bisect.rs  branch.rs  commit.rs  diff.rs  file.rs  mod.rs  rebase.rs  remote.rs  staging.rs  status.rs  submodule.rs  tag.rs  worktree.rs
src/gui/: layout.rs  mod.rs  popup.rs  scroll.rs  views.rs
src/gui/context/: mod.rs
src/gui/controller/: bisect.rs  branch_commits.rs  branches.rs  commit_files.rs  commits.rs  custom_commands.rs  diff_mode.rs  files.rs  (+11 more)
src/model/: commit.rs  file.rs  file_tree.rs  mod.rs
src/os/: cmd.rs
src/pager/: diff_algo.rs  mod.rs  side_by_side.rs  word_diff.rs
(+19 files in other folders)
