[package]
name = "lazygitrs"
version = "0.0.18"
edition = "2024"
description = "A faster, memory-safe, more ergonomic slopfork of lazygit"
repository = "https://github.com/blankeos/lazygitrs"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = { version = "0.28", features = ["event-stream"] }
dirs = "6"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
once_cell = "1"
include_dir = "0.7"
similar = { version = "2", features = ["unicode"] }
tree-sitter = "0.24"
tree-sitter-highlight = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-javascript = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.24"
tree-sitter-bash = "0.23"
tree-sitter-toml-ng = "0.7"
tree-sitter-css = "0.23"
tree-sitter-html = "0.23"
tree-sitter-md = "0.3"
unicode-width = "0.2"
tui-textarea = { version = "0.7", features = ["crossterm"] }
textwrap = "0.16.2"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
